--- a/shared.css
+++ b/shared.css
@@ -7,6 +7,15 @@ body{
 }
 
 .page{
-    width: 75vw;
+    width: 60vw;
     margin: auto;
+}
+
+h1{
+    font-size: 50pt;
+    /* background: linear-gradient(0deg, orange, rgb(232, 54, 34)); */
+    background: linear-gradient(100deg, red,orange,yellow);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
