--- a/shared.css
+++ b/shared.css
@@ -13,9 +13,20 @@ body{
 
 h1{
     font-size: 50pt;
+    text-align: center;
     /* background: linear-gradient(0deg, orange, rgb(232, 54, 34)); */
-    background: linear-gradient(100deg, red,orange,yellow);
+    background: linear-gradient(100deg, red,var(--princeton), var(--honey));
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+.paragraph::before{
+    content: 'WW';
+    color: rgba(255, 255, 255, 0);
+}
+
+.paragraph{
+    font-weight: 300;
+    font-size: 14pt;
 }
