--- a/shared.css
+++ b/shared.css
@@ -2,13 +2,14 @@ body{
     background-color: rgb(22, 22, 22);
 }
 
-.main-navbar{
-    background-color: var(--burntOrange);
-}
-
 .page{
     width: 60vw;
     margin: auto;
+}
+
+.content{
+    left: 0;
+    z-index: 0;
 }
 
 h1{
