--- a/shared.css
+++ b/shared.css
@@ -2,6 +2,14 @@
     --accentColor: var(--burntOrange);
 }
 
+.left-navbar .active {
+    background-color: var(--burntOrange);
+}
+
+.left-navbar .active:hover {
+    background-color: var(--burntOrange);
+}
+
 body{
     background-color: rgb(22, 22, 22);
 }
