--- a/1.7/style.css
+++ b/1.7/style.css
@@ -1,72 +1,14 @@
-.panel-wrapper{
-    height: 100vh;
+:root{
+    --navbarBg: red;
+}
+
+body{
+    margin: 0;
+    background-color: orange;
+}
+
+.top-navbar{
+    height: auto;
     width: 100vw;
-
-    position: fixed;
-    top: 0;
-    left: 0;
-
-    z-index: 1000000000000;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.panel-wrapper-background {
-    height: 100vh;
-    width: 100vw;
-    background-color: rgba(0, 0, 0, 0.5);
-
-    position: fixed;
-    top: 0;
-    left: 0;
-
-    z-index: 10000000000;
-
-    backdrop-filter: blur(5pt);
-    -webkit-backdrop-filter: blur(5pt);
-    -moz-backdrop-filter: blur(5pt);
-}
-
-.panel-wrapper .panel {
-    width: fit-content;
-    background-color: rgba(255, 255, 255, 0.814);
-    color: black;
-    padding: 20pt;
-    border-radius: 10pt;
-}
-
-.panel-wrapper .panel .section {
-    border-bottom: solid 1pt black;
-    padding: 5pt;
-    text-align: center;
-}
-
-.panel-wrapper .panel .section:hover{
-    background-color: lightsalmon;
-    cursor: default;
-}
-
-.panel-wrapper .panel .section .label {
-    font-weight: 600;
-    margin-right: 5pt;
-}
-
-.panel-wrapper .panel .section .answer {
-    font-weight: 400;
-}
-
-.panel-wrapper .panel .section .clickable-answer:hover {
-    text-decoration: underline;
-    cursor: pointer;
-}
-
-.panel-wrapper .panel{
-    font-weight: 500;
-}
-
-.panel-wrapper .panel .section .spacer{
-    width: 30pt;
-    display: inline-block;
+    background: var(--navbarBg);
 }
