--- a/shared.css
+++ b/shared.css
@@ -52,3 +52,44 @@ h2{
     padding-top: 10pt;
     text-align: center;
 }
+
+.top-navbar{
+    z-index: 0;
+}
+
+
+
+
+
+.expand-panel-wrapper{
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 200;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.expand-panel{
+    height: 80vh;
+    width: 80vw;
+    position: absolute;
+    top: 10vh;
+    left: 10vw;
+    background-color: white;
+}
+
+@media screen and (hover: none) and (pointer: coarse) {
+    .expand-panel{
+        height: 100vh;
+        width: 100vw;
+        top: 0;
+        left: 0;
+    }
+}
+
+.expand-panel .top-bar{
+    background-color: blue;
+    padding: 15pt;
+}
